--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/primeflex@2.0.0/primeflex.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primeicons@4.0.0/primeicons.css" />
     <title>Sbot | Licenses</title>
   </head>
   <body>
