--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Sbot | Licenses</title>
 </head>
 
-<body class="overflow-hidden">
+<body>
   <div id="root">
   </div>
   <script type="module" src="/src/main.tsx"></script>
