--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/primeflex@2.0.0/primeflex.css" />
   <link rel="stylesheet" href="https://unpkg.com/primeicons@4.0.0/primeicons.css" />
-  <title>Sbot | Licenses</title>
+  <link href="./src/utils/hamburger.css" rel="stylesheet">
+  <title>Sbot - Licenses</title>
 </head>
 
 <body>
   <div id="root">
   </div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="/src/helpers/menu-hambuerger.js"></script>
 </body>
 
 </html>
